# CS7643_final_project

./: .gitignore  LICENSE  Pipfile  README.md  Untitled.ipynb  holdup  logcfg.yaml  parser_example.ipynb  pyproject.toml  requirements.txt  setup.py  updated_parser.ipynb
parser/: action_matrix.py  chip_bucket_matrix.py  parser.py
src/holdup/: datapickler.py  test.py  utils.py
src/holdup/parser/: action_matrix.py  chip_bucket_matrix.py  data_prepper.py  hand_matrix.py  player_actions.py  replayable_hand.py
src/holdup/the_model/: Create_masked_data.ipynb  README.md  autoencoder.py  autoencoder2.py  autoencoder3.py  get_datasets.py  modifying_models_notebooks.ipynb  run_training.py  run_training3.py  scg.py
src/holdup/visualizations/: Generate_viz_dict.ipynb  README.md  flop_ed.pickle  flop_nd.pickle  generate_charts.py  river_ed.pickle  river_nd.pickle  turn_ed.pickle  turn_nd.pickle
src/holdup/visualizations/json_dictionaries/: d_epochs.json  d_nodes.json
